# api-ia

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GUIDE.md  Makefile  README.md  api-ia.err  docker-compose.yml  docker-entrypoint.sh  openapi.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py
.github/: dependabot.yml
app/: __init__.py  config.py  extensions.py  main.py  openapi_config.py  schemas.py
docs/: ai-engines-technical-doc.md  algorithmes-apis-ergonomie-accessibilite.md  architecture.md  documentation-complete.md  model-training-report-nutrition.md  model-training-report.md  mongodb-schema.md  mspr-contexte.md  nutrition-engine.md
scripts/: export_openapi.py  seed_mongodb.py  seed_nutrition_foods.py  seed_real_workout_feedback.py  train_meal_type_model.py  train_workout_model.py
tests/: conftest.py  test_backend_auth.py  test_backend_nutrition_lookup.py  test_container.py  test_create_workout_program_use_case.py  test_dataset_builder.py  test_e2e_workflows.py  test_engine_metrics.py  test_feature_engineering.py  test_generate_meal_plan.py  test_google_vision_provider.py  test_health.py  test_http_handlers.py  test_legacy_shims.py  test_llm_provider.py  test_main_lifespan.py  test_meal_composer.py  test_meal_composer_edge.py  test_meal_composer_ml_wiring.py  test_meal_type_features.py  test_meal_type_model.py  test_ml_scoring_model.py  test_model_deployment_guard.py  test_mongo_nutrition_lookup.py  test_mongo_nutrition_lookup_integration.py  test_mongo_repositories_integration.py  test_mongo_repositories_test_mode.py  test_mongodb_schema.py  test_nutrition.py  test_nutrition_cache.py  test_nutrition_domain.py  test_nutrition_fallback.py  (+13 more)
(+99 files in other folders)
